package dev.daniel.compo.composer;

public enum Country {
    AFGHANISTAN("AF", "Afghanistan", Continent.ASIA),
    ALBANIA("AL", "Albania", Continent.EUROPE),
    ANDORRA("AN", "Andorra", Continent.EUROPE),
    ALGERIA("DZ", "Algeria", Continent.AFRICA),
    ANGOLA("AO", "Angola", Continent.AFRICA),
    ARGENTINA("AR", "Argentina", Continent.SOUTH_AMERICA),
    ARMENIA("AM", "Armenia", Continent.ASIA),
    AUSTRALIA("AU", "Australia", Continent.OCEANIA),
    AUSTRIA("AT", "Austria", Continent.EUROPE),
    AZERBAIJAN("AZ", "Azerbaijan", Continent.ASIA),
    BAHAMAS("BS", "Bahamas", Continent.NORTH_AMERICA),
    BAHRAIN("BH", "Bahrain", Continent.ASIA),
    BANGLADESH("BD", "Bangladesh", Continent.ASIA),
    BARBADOS("BB", "Barbados", Continent.NORTH_AMERICA),
    BELARUS("BY", "Belarus", Continent.EUROPE),
    BELGIUM("BE", "Belgium", Continent.EUROPE),
    BELIZE("BZ", "Belize", Continent.NORTH_AMERICA),
    BENIN("BJ", "Benin", Continent.AFRICA),
    BHUTAN("BT", "Bhutan", Continent.ASIA),
    BOLIVIA("BO", "Bolivia", Continent.SOUTH_AMERICA),
    BOSNIA_AND_HERZEGOVINA("BA", "Bosnia and Herzegovina", Continent.EUROPE),
    BOTSWANA("BW", "Botswana", Continent.AFRICA),
    BRAZIL("BR", "Brazil", Continent.SOUTH_AMERICA),
    BRUNEI("BN", "Brunei", Continent.ASIA),
    BULGARIA("BG", "Bulgaria", Continent.EUROPE),
    BURKINA_FASO("BF", "Burkina Faso", Continent.AFRICA),
    BURUNDI("BI", "Burundi", Continent.AFRICA),
    CAMBODIA("KH", "Cambodia", Continent.ASIA),
    CAMEROON("CM", "Cameroon", Continent.AFRICA),
    CANADA("CA", "Canada", Continent.NORTH_AMERICA),
    CAPE_VERDE("CV", "Cape Verde", Continent.AFRICA),
    CENTRAL_AFRICAN_REPUBLIC("CF", "Central African Republic", Continent.AFRICA),
    CHAD("TD", "Chad", Continent.AFRICA),
    CHILE("CL", "Chile", Continent.SOUTH_AMERICA),
    CHINA("CN", "China", Continent.ASIA),
    COLOMBIA("CO", "Colombia", Continent.SOUTH_AMERICA),
    COMOROS("KM", "Comoros", Continent.AFRICA),
    CONGO("CG", "Congo", Continent.AFRICA),
    COSTA_RICA("CR", "Costa Rica", Continent.NORTH_AMERICA),
    CROATIA("HR", "Croatia", Continent.EUROPE),
    CUBA("CU", "Cuba", Continent.NORTH_AMERICA),
    CYPRUS("CY", "Cyprus", Continent.EUROPE),
    CZECH_REPUBLIC("CZ", "Czech Republic", Continent.EUROPE),
    DENMARK("DK", "Denmark", Continent.EUROPE),
    DJIBOUTI("DJ", "Djibouti", Continent.AFRICA),
    DOMINICA("DM", "Dominica", Continent.NORTH_AMERICA),
    DOMINICAN_REPUBLIC("DO", "Dominican Republic", Continent.NORTH_AMERICA),
    EAST_TIMOR("TL", "East Timor", Continent.ASIA),
    ECUADOR("EC", "Ecuador", Continent.SOUTH_AMERICA),
    EGYPT("EG", "Egypt", Continent.AFRICA),
    EL_SALVADOR("SV", "El Salvador", Continent.NORTH_AMERICA),
    EQUATORIAL_GUINEA("GQ", "Equatorial Guinea", Continent.AFRICA),
    ERITREA("ER", "Eritrea", Continent.AFRICA),
    ESTONIA("EE", "Estonia", Continent.EUROPE),
    ETHIOPIA("ET", "Ethiopia", Continent.AFRICA),
    FIJI("FJ", "Fiji", Continent.OCEANIA),
    FINLAND("FI", "Finland", Continent.EUROPE),
    FRANCE("FR", "France", Continent.EUROPE),
    GABON("GA", "Gabon", Continent.AFRICA),
    GAMBIA("GM", "Gambia", Continent.AFRICA),
    GEORGIA("GE", "Georgia", Continent.ASIA),
    GERMANY("DE", "Germany", Continent.EUROPE),
    GHANA("GH", "Ghana", Continent.AFRICA),
    GREECE("GR", "Greece", Continent.EUROPE),
    GRENADA("GD", "Grenada", Continent.NORTH_AMERICA),
    GUATEMALA("GT", "Guatemala", Continent.NORTH_AMERICA),
    GUINEA("GN", "Guinea", Continent.AFRICA),
    GUINEA_BISSAU("GW", "Guinea-Bissau", Continent.AFRICA),
    GUYANA("GY", "Guyana", Continent.SOUTH_AMERICA),
    HAITI("HT", "Haiti", Continent.NORTH_AMERICA),
    HONDURAS("HN", "Honduras", Continent.NORTH_AMERICA),
    HUNGARY("HU", "Hungary", Continent.EUROPE),
    ICELAND("IS", "Iceland", Continent.EUROPE),
    INDIA("IN", "India", Continent.ASIA),
    INDONESIA("ID", "Indonesia", Continent.ASIA),
    IRAN("IR", "Iran", Continent.ASIA),
    IRAQ("IQ", "Iraq", Continent.ASIA),
    IRELAND("IE", "Ireland", Continent.EUROPE),
    ISRAEL("IL", "Israel", Continent.ASIA),
    ITALY("IT", "Italy", Continent.EUROPE),
    JAMAICA("JM", "Jamaica", Continent.NORTH_AMERICA),
    JAPAN("JP", "Japan", Continent.ASIA),
    JORDAN("JO", "Jordan", Continent.ASIA),
    KAZAKHSTAN("KZ", "Kazakhstan", Continent.ASIA),
    KENYA("KE", "Kenya", Continent.AFRICA),
    KIRIBATI("KI", "Kiribati", Continent.OCEANIA),
    KOREA_NORTH("KP", "Korea, North", Continent.ASIA),
    KOREA_SOUTH("KR", "Korea, South", Continent.ASIA),
    KOSOVO("KV", "Kosovo", Continent.EUROPE),
    KUWAIT("KW", "Kuwait", Continent.ASIA),
    KYRGYZSTAN("KG", "Kyrgyzstan", Continent.ASIA),
    LAOS("LA", "Laos", Continent.ASIA),
    LATVIA("LV", "Latvia", Continent.EUROPE),
    LEBANON("LB", "Lebanon", Continent.ASIA),
    LESOTHO("LS", "Lesotho", Continent.AFRICA),
    LIBERIA("LR", "Liberia", Continent.AFRICA),
    LIBYA("LY", "Libya", Continent.AFRICA),
    LIECHTENSTEIN("LI", "Liechtenstein", Continent.EUROPE),
    LITHUANIA("LT", "Lithuania", Continent.EUROPE),
    LUXEMBOURG("LU", "Luxembourg", Continent.EUROPE),
    MACEDONIA("MK", "Macedonia", Continent.EUROPE),
    MADAGASCAR("MG", "Madagascar", Continent.AFRICA),
    MALAWI("MW", "Malawi", Continent.AFRICA),
    MALAYSIA("MY", "Malaysia", Continent.ASIA),
    MALDIVES("MV", "Maldives", Continent.ASIA),
    MALI("ML", "Mali", Continent.AFRICA),
    MALTA("MT", "Malta", Continent.EUROPE),
    MARSHALL_ISLANDS("MH", "Marshall Islands", Continent.OCEANIA),
    MAURITANIA("MR", "Mauritania", Continent.AFRICA),
    MAURITIUS("MU", "Mauritius", Continent.AFRICA),
    MEXICO("MX", "Mexico", Continent.NORTH_AMERICA),
    MICRONESIA("FM", "Micronesia", Continent.OCEANIA),
    MOLDOVA("MD", "Moldova", Continent.EUROPE),
    MONACO("MC", "Monaco", Continent.EUROPE),
    MONGOLIA("MN", "Mongolia", Continent.ASIA),
    MONTENEGRO("ME", "Montenegro", Continent.EUROPE),
    MOROCCO("MA", "Morocco", Continent.AFRICA),
    MOZAMBIQUE("MZ", "Mozambique", Continent.AFRICA),
    MYANMAR("MM", "Myanmar", Continent.ASIA),
    NAMIBIA("NA", "Namibia", Continent.AFRICA),
    NAURU("NR", "Nauru", Continent.OCEANIA),
    NEPAL("NP", "Nepal", Continent.ASIA),
    NETHERLANDS("NL", "Netherlands", Continent.EUROPE),
    NEW_ZEALAND("NZ", "New Zealand", Continent.OCEANIA),
    NICARAGUA("NI", "Nicaragua", Continent.NORTH_AMERICA),
    NIGER("NE", "Niger", Continent.AFRICA),
    NIGERIA("NG", "Nigeria", Continent.AFRICA),
    NORWAY("NO", "Norway", Continent.EUROPE),
    OMAN("OM", "Oman", Continent.ASIA),
    PAKISTAN("PK", "Pakistan", Continent.ASIA),
    PALAU("PW", "Palau", Continent.OCEANIA),
    PANAMA("PA", "Panama", Continent.NORTH_AMERICA),
    PAPUA_NEW_GUINEA("PG", "Papua New Guinea", Continent.OCEANIA),
    PARAGUAY("PY", "Paraguay", Continent.SOUTH_AMERICA),
    PERU("PE", "Peru", Continent.SOUTH_AMERICA),
    PHILIPPINES("PH", "Philippines", Continent.ASIA),
    POLAND("PL", "Poland", Continent.EUROPE),
    PORTUGAL("PT", "Portugal", Continent.EUROPE),
    QATAR("QA", "Qatar", Continent.ASIA),
    ROMANIA("RO", "Romania", Continent.EUROPE),
    RUSSIA("RU", "Russia", Continent.ASIA),
    RWANDA("RW", "Rwanda", Continent.AFRICA),
    SAINT_KITTS_AND_NEVIS("KN", "Saint Kitts and Nevis", Continent.NORTH_AMERICA),
    SAINT_LUCIA("LC", "Saint Lucia", Continent.NORTH_AMERICA),
    SAINT_VINCENT_AND_THE_GRENADINES("VC", "Saint Vincent and the Grenadines", Continent.NORTH_AMERICA),
    SAMOA("WS", "Samoa", Continent.OCEANIA),
    SAN_MARINO("SM", "San Marino", Continent.EUROPE),
    SAO_TOME_AND_PRINCIPE("ST", "Sao Tome and Principe", Continent.AFRICA),
    SAUDI_ARABIA("SA", "Saudi Arabia", Continent.ASIA),
    SENEGAL("SN", "Senegal", Continent.AFRICA),
    SERBIA("RS", "Serbia", Continent.EUROPE),
    SEYCHELLES("SC", "Seychelles", Continent.AFRICA),
    SIERRA_LEONE("SL", "Sierra Leone", Continent.AFRICA),
    SINGAPORE("SG", "Singapore", Continent.ASIA),
    SLOVAKIA("SK", "Slovakia", Continent.EUROPE),
    SLOVENIA("SI", "Slovenia", Continent.EUROPE),
    SOLOMON_ISLANDS("SB", "Solomon Islands", Continent.OCEANIA),
    SOMALIA("SO", "Somalia", Continent.AFRICA),
    SOUTH_AFRICA("ZA", "South Africa", Continent.AFRICA),
    SOUTH_SUDAN("SS", "South Sudan", Continent.AFRICA),
    SPAIN("ES", "Spain", Continent.EUROPE),
    SRI_LANKA("LK", "Sri Lanka", Continent.ASIA),
    SUDAN("SD", "Sudan", Continent.AFRICA),
    SURINAME("SR", "Suriname", Continent.SOUTH_AMERICA),
    SWAZILAND("SZ", "Swaziland", Continent.AFRICA),
    SWEDEN("SE", "Sweden", Continent.EUROPE),
    SWITZERLAND("CH", "Switzerland", Continent.EUROPE),
    SYRIA("SY", "Syria", Continent.ASIA),
    TAIWAN("TW", "Taiwan", Continent.ASIA),
    TAJIKISTAN("TJ", "Tajikistan", Continent.ASIA),
    TANZANIA("TZ", "Tanzania", Continent.AFRICA),
    THAILAND("TH", "Thailand", Continent.ASIA),
    TOGO("TG", "Togo", Continent.AFRICA),
    TONGA("TO", "Tonga", Continent.OCEANIA),
    TRINIDAD_AND_TOBAGO("TT", "Trinidad and Tobago", Continent.NORTH_AMERICA),
    TUNISIA("TN", "Tunisia", Continent.AFRICA),
    TURKEY("TR", "Turkey", Continent.ASIA),
    TURKMENISTAN("TM", "Turkmenistan", Continent.ASIA),
    TUVALU("TV", "Tuvalu", Continent.OCEANIA),
    UGANDA("UG", "Uganda", Continent.AFRICA),
    UKRAINE("UA", "Ukraine", Continent.EUROPE),
    UNITED_ARAB_EMIRATES("AE", "United Arab Emirates", Continent.ASIA),
    UNITED_KINGDOM("GB", "United Kingdom", Continent.EUROPE),
    UNITED_STATES("US", "United States", Continent.NORTH_AMERICA),
    URUGUAY("UY", "Uruguay", Continent.SOUTH_AMERICA),
    UZBEKISTAN("UZ", "Uzbekistan", Continent.ASIA),
    VANUATU("VU", "Vanuatu", Continent.OCEANIA),
    VATICAN_CITY("VA", "Vatican City", Continent.EUROPE),
    VENEZUELA("VE", "Venezuela", Continent.SOUTH_AMERICA),
    VIETNAM("VN", "Vietnam", Continent.ASIA),
    YEMEN("YE", "Yemen", Continent.ASIA),
    ZAMBIA("ZM", "Zambia", Continent.AFRICA),
    ZIMBABWE("ZW", "Zimbabwe", Continent.AFRICA);

    private final String code;
    private final String name;
    private final Continent continent;

    Country(String code, String name, Continent continent) {
        this.code = code;
        this.name = name;
        this.continent = continent;
    }

    public String getCode() {
        return code;
    }

    public String getName() {
        return name;
    }

    public Continent getContinent() {
        return continent;
    }
}