package dev.daniel.compo.composer;

public enum Gender {
    MALE, FEMALE, OTHER
}
