package dev.daniel.compo.composer;

public enum Genre {
    CLASSICAL, JAZZ, POP, LITURGICAL, THEATRE, BLUES
}
